--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
 
     <header>
-        <h1>Welcome to Your Responsive Website</h1>
+        <h1>Literatūrinis Vilnius</h1>
         <nav>
             <ul>
                 <li><a href="#about">About</a></li>
@@ -36,7 +36,7 @@
     </main>
 
     <footer>
-        <p>&copy; 2024 Your Responsive Website. All rights reserved.</p>
+        <p>&copy; 2024 Rusnė Vilkelė. All rights reserved.</p>
     </footer>
 
     <!-- Add Leaflet JS -->
