--- a/index.html
+++ b/index.html
@@ -13,22 +13,22 @@
 <body>
 
     <header>
-        <h1>Literatūrinis Vilnius</h1>
+        <h1 class="title">Literatūrinis Vilnius</h1>
         <nav>
             <ul>
-                <li><a href="#about">About</a></li>
-                <li><a href="#map">Map</a></li>
+                <li><a href="#about">Apie</a></li>
+                <li><a href="#map">Žemėlapis</a></li>
             </ul>
         </nav>
     </header>
 
     <main>
         <section id="about">
-            <h2>About Us</h2>
-            <p>This is a simple website created with HTML and styled responsively.</p>
+            <h2>Apie mus</h2>
+            <p>galimai bus įdėtas tekstas apie tai, kokiu tikslu veikia ši svetainė ir pan.</p>
         </section>
         <section id="map">
-            <h2>Map</h2>
+            <h2>Žemėlapis</h2>
             <!-- Your map container goes here -->
             <div id="map-container">
                     </div>
@@ -36,7 +36,7 @@
     </main>
 
     <footer>
-        <p>&copy; 2024 Rusnė Vilkelė. All rights reserved.</p>
+        <p>&copy; 2024 </p>
     </footer>
 
     <!-- Add Leaflet JS -->
