--- a/meras.html
+++ b/meras.html
@@ -32,13 +32,13 @@
                 </p>
                 <p class="title">Kūryba</p>
                 <p class="sarasas">
-                    Icchoko Mero pirmasis kūrinys buvo apysaka „Geltonas lopas“, tačiau jis daugiausiai rašė romanus: „Lygiosios trunka akimirką“, „Ant ko laikosi pasaulis“, „Mėnulio savaitė“, „Ant ko laikosi pasaulis“, „Sara“, „Striptizas, arba Roma-Paryžius-Roma“, „Ties gatvės žibintu“. Jis parašė  „Žemė visada gyva“, „Senas fontanas“, „Apverstas pasaulis“, „Stotelė vidukelėj“. 
-                    Už savo kūrybą Icchokas Meras yra gavęs dešimtį apdovanojimų, tokių kaip Lietuvos Didžiojo kunigaikščio Gedimino ordinas, Lietuvos nacionalinė kultūros ir meno premija.                    
+Icchoko Mero pirmasis kūrinys buvo apysaka „Geltonas lopas“, tačiau jis daugiausiai rašė romanus: „Lygiosios trunka akimirką“, „Ant ko laikosi pasaulis“, „Mėnulio savaitė“, „Sara“, „Striptizas, arba Roma-Paryžius-Roma“, „Ties gatvės žibintu“. Sukūrė ir apsakymų, apysakų: „Žemė visada gyva“, „Senas fontanas“, „Apverstas pasaulis“, „Stotelė vidukelėj“. 
+Už savo kūrybą Icchokas Meras yra gavęs dešimtį apdovanojimų, tokių kaip Lietuvos Didžiojo kunigaikščio Gedimino ordinas, Lietuvos nacionalinė kultūros ir meno premija.                    
                     </p>
                 <p class="title">Atminimo įamžinimas</p>
                 <p class="info">
                     Icchoką merą galima atminti prie memorialinės lentos Rūdninkų ir Visų Šventųjų gatvių sankryžoje su Vilniaus geto planu, kuriame buvo kankinami žydai, įskaitant ir Icchoką Merą.
-                    Rašytojo kūrybos galima pasiklausyti LRT mediatekoje,<a href="https://www.lrt.lt/mediateka/irasas/2000192829/vakaras-su-knyga-icchokas-meras-tukstantis-tukstantis-tukstantis-myliu">„Vakaras su knyga“</a>.</p>
+                    Rašytojo kūrybos galima pasiklausyti LRT mediatekoje,<a href="https://www.lrt.lt/mediateka/irasas/2000192829/vakaras-su-knyga-icchokas-meras-tukstantis-tukstantis-tukstantis-myliu">„Vakaras su knyga“, aktorės Elvyros Žebertavičiūtės monospektaklyje „Tūkstantis, tūkstantis, tūkstantis mylių”, sukurtame pagal Icchoko Mero apsakymą</a>.</p>
                 
                 <p class="title">Galerija</p>
                 <div class="imgg"><figure>
