--- a/gatve.html
+++ b/gatve.html
@@ -28,8 +28,7 @@
             <h2>Literatų gatvė</h2>
             <p class="info">
                 <img class="portretas" src="./images/lg.jpg" > 
-                Literatų gatvė – viena seniausių gatvių Vilniaus senamiestyje, žinoma dėl sienų, papuoštų meno kūriniais, susijusiais su rašytojais ir poetais. Gatvė gavo savo dabartinį pavadinimą tik XX a. pradžioje dėl joje įsikūrusių spaustuvių, knygynų bei antikvariatų. Dar viena versija dėl Literatų gatvės pavadinimo kilmės yra susijusi su rašytoju Adomu Mickevičiumi. Šioje gatvėje, keturių aukštų namo palėpėje, jis nuomojosi butą. Tiesa, šiuo metu gatvelė žavi ne tik tuo, kad kadaise čia gyveno poetas, tačiau ir papildomais akcentais, kurie pradėjo puošti gatvę 2008 metais. Iniciatoriai – menininkai, kurie norėdami labiau sureikšminti literatūrinius tautos palikimus gatvę puošė ir ar vis puošia kūriniais, kurie yra susiję su literatais. Tam buvo atidengta visa siena, kurioje menininkai kūrė dirbinius iš medžio, stiklo, metalo bei kitų medžiagų ir kaip juos dekoravo į sieną. Žinoma, visus juos vienijo literatūros simbolika. 2008 metais menininkų iniciatyva buvo pradėtas kūrybinis projektas Literatų gatvėje - ant gatvės sienų pradėtos kabinti atminimo lentelės, susijusios su Vilniuje gyvenusiais, kūrusiais literatais, su užsienio literatais, besilankiusiais Vilniuje. 2009 metų gegužės 28 dieną buvo atidengti pirmieji darbai.  Kadangi projekte menininkai dalyvavo kaip savanoriai, jų tarpe buvo daug jaunų kūrėjų, įamžinusių savo mėgstamus rašytojus. Rašytojai buvo pasirenkami laisvai, be išankstinio susitarimo, pagal „mėgstamas“, „žinomas“, „populiarus“ principą. Šiai dienai ant sienos kabo virš 200 dekoruotų keramikos, medžio, metalo ir stiklo plokštelių skirtų literatams, tokiems kaip: Sigitas Geda, Kazys Binkis, Romain Gary, Vytautas Kernagis, Janina Degutytė, Jonas Mekas, Jurga Ivanauskaitė, Antanas Škėma, Paulius Širvys, Vincas Mykolaitis – Putinas, Vytautė Žilinskaitė, Antanas Strazdas, Ieva Simonaitytė, Romualdas Granauskas, Maironis, Vanda Juknaitė, Oskaras Milašius, Česlovas Milošas, Kristina Sabaliauskaitė, Žemaitė, Tomas Venclova, ir daugelis kitų.
-                </p>
+                Literatų gatvė – viena seniausių gatvių Vilniaus senamiestyje, žinoma dėl sienų, papuoštų meno kūriniais, susijusiais su rašytojais ir poetais. Gatvė gavo savo dabartinį pavadinimą tik XX a. pradžioje dėl joje įsikūrusių spaustuvių, knygynų bei antikvariatų. Dar viena versija dėl Literatų gatvės pavadinimo kilmės yra susijusi su rašytoju Adomu Mickevičiumi. Šioje gatvėje, keturių aukštų namo palėpėje, jis nuomojosi butą. Tiesa, šiuo metu gatvelė žavi ne tik tuo, kad kadaise čia gyveno poetas, tačiau ir papildomais akcentais, kurie pradėjo puošti gatvę 2008 metais. Iniciatoriai – menininkai, kurie norėdami labiau sureikšminti literatūrinį tautos palikimą gatvę papuošė ir vis tebepuošia kūriniais, kurie yra susiję su literatais. Tam buvo atidengta visa siena su menininkų sukurtais medžio, stiklo, metalo dirbiniais. Žinoma, visus juos vienija literatūros simbolika. 2009 metų gegužės 28 dieną buvo atidengti pirmieji darbai.  Kadangi projekte menininkai dalyvavo kaip savanoriai, tarp jų buvo daug jaunų kūrėjų, įamžinusių savo mėgstamus rašytojus. Rašytojai buvo pasirenkami laisvai, be išankstinio susitarimo, pagal „mėgstamas“, „žinomas“, „populiarus“ principą. Šiandien ant sienos kabo daugiau nei 200 dekoruotų keramikos, medžio, metalo ir stiklo plokštelių, skirtų literatams, tokiems kaip: Sigitas Geda, Kazys Binkis, Romenas Gari, Vytautas Kernagis, Janina Degutytė, Jonas Mekas, Jurga Ivanauskaitė, Antanas Škėma, Paulius Širvys, Vincas Mykolaitis – Putinas, Vytautė Žilinskaitė, Antanas Strazdas, Ieva Simonaitytė, Romualdas Granauskas, Maironis, Vanda Juknaitė, Oskaras Milašius, Česlovas Milošas, Kristina Sabaliauskaitė, Žemaitė, Tomas Venclova ir daugelis kitų.                </p>
                 <p class="title">"Literatų gatvė"</p>
                 <p class="sarasas">
                     Prieš lietuvių kalbos abitūros
@@ -56,45 +55,40 @@
                 <p class="title">Galerija</p>
                 <div class="imgg"><figure>
                 <img class="img" src="./images/lg1.jpg"> 
-                <figcaption>   </figcaption>
+                <figcaption>Deimantės Rybakovienės lentelė skirta Romenui Gari</figcaption>
                 </figure>
                 <figure>
                 <img class="img" src="./images/lg2.jpg" > 
-                <figcaption>   </figcaption>
+                <figcaption>Karolinos Kunčinaitės lentelė skirta Jurgiui Kunčinui</figcaption>
                 </figure>
                 <figure>
                 <img class="img" src="./images/lg3.jpg" > 
-                <figcaption>   </figcaption>
+                <figcaption>Lauros Grybkauskaitės lentelė skirta Justinui Marcinkevičiui</figcaption>
                 </figure>
                 </div>
 
                 <div class="imgg"><figure>
                 <img class="img" src="./images/lg4.jpg"> 
-                <figcaption>   </figcaption>
+                <figcaption>Ieevos Tranaitės lentelė skirta Icchokui Merui</figcaption>
                 </figure>
                 <figure>
                 <img class="img" src="./images/lg5.jpg" > 
-                <figcaption>   </figcaption>
+                <figcaption>Deimantės Rybakovienės lentelė skirta Česlovui Milošui</figcaption>
                 </figure>
                 <figure>
                 <img class="img" src="./images/lg6.jpg" > 
-                <figcaption>   </figcaption>
+                <figcaption>Monikos Micevičiūtės lentelė skirta Vincui Mykolaičiui-Putinui</figcaption>
                 </figure>
                  </div>
 
                 <div class="imgg"><figure>
                 <img class="img" src="./images/lg7.jpg"> 
-                <figcaption>   </figcaption>
+                <figcaption>Rasos Noreikaitės-Miliūnienės lentelė skirta Kristinai Sabaliauskaitei</figcaption>
                 </figure>
                 <figure>
                 <img class="img" src="./images/lg8.jpg" > 
-                <figcaption>   </figcaption>
+                <figcaption>Eimanto Ludavičiaus lentelė skirta Tomui Venclovai</figcaption>
                 </figure>
-                <figure>
-                <img class="img" src="./images/lg" > 
-                <figcaption>   </figcaption>
-                </figure>
-                </div>
          </section>
         <section id="map">
             <h2>Žemėlapis</h2>
