--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
 
     <main>
         <section id="about">
-            <h2>Apie mus</h2>
-            <p>galimai bus įdėtas tekstas apie tai, kokiu tikslu veikia ši svetainė ir pan.</p>
+            <h2>Apie svetainę</h2>
+            <p>Šioje svetinėje yra pateikiama informacija apie 11-12 klasėse minimus literatus. Pakeitus 11-tokų kursą, nėra pakankamai medžiagos mokymuisi, todėl buvo sukurta ši internetinė svetainė. Šioje svetainėje galite geriau pažinti Vilnių, kartu sužinodami reikiamos informacijos apie naujo literatūros kurso literatus. </p>
         </section>
         <section id="list">
             <h2>Literatų sąrašas</h2>
